; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_menu.c_draw_dispmenu_options.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_menu.c_draw_dispmenu_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opt3_entries = common dso_local global i32 0, align 4
@OPT3_ENTRY_COUNT = common dso_local global i32 0, align 4
@menu_opt3_cust_draw = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @draw_dispmenu_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @draw_dispmenu_options(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 80, i32* %3, align 4
  store i32 66, i32* %4, align 4
  %5 = call i32 (...) @menu_draw_begin()
  %6 = load i32, i32* %3, align 4
  %7 = sub nsw i32 %6, 16
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %2, align 4
  %10 = mul nsw i32 %9, 10
  %11 = add nsw i32 %8, %10
  %12 = call i32 @menu_draw_selection(i32 %7, i32 %11, i32 316)
  %13 = load i32, i32* @opt3_entries, align 4
  %14 = load i32, i32* @OPT3_ENTRY_COUNT, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @menu_opt3_cust_draw, align 4
  %18 = call i32 @me_draw(i32 %13, i32 %14, i32 %15, i32 %16, i32 %17, i32* null)
  %19 = call i32 (...) @menu_draw_end()
  ret void
}

declare dso_local i32 @menu_draw_begin(...) #1

declare dso_local i32 @menu_draw_selection(i32, i32, i32) #1

declare dso_local i32 @me_draw(i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @menu_draw_end(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
